fix checkbox text align (#99)

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 }
 
 .checkbox-wrapper {
-    display: inline-block;
+    display: flex;
     margin-bottom: 8px;
     position: relative;
 }
